# rag-chatbot

./: .env.example  .gitignore  Makefile  pyproject.toml
research/: 01_data_sources.md  02_pdf_quality_analysis.md  03_similar_projects.md  04_papers_and_architecture.md  05_implementation_plan.md  06_phase1_parsing_results.md
scripts/: 01_parse_pdfs.py
src/: config.py
src/parsing/: chunker.py  pdf_extractor.py  structure_parser.py
