[project]
name = "insurance-rag-chatbot"
version = "0.1.0"
description = "보험약관 PDF 기반 RAG 챗봇"
requires-python = ">=3.11"

dependencies = [
    # PDF 파싱
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.25.0",
    "pdfplumber>=0.11.0",

    # 한국어 NLP
    "kiwipiepy>=0.21.0",

    # 임베딩 & 벡터 DB
    "sentence-transformers>=3.4.0",
    "chromadb>=0.6.0",
    "rank-bm25>=0.2.2",

    # LLM
    "httpx>=0.28.0",
    "anthropic>=0.42.0",

    # 평가
    "ragas>=0.2.0",

    # 유틸리티
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.67.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.3.0",
    "pytest>=8.3.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
]

reranker = [
    "transformers>=4.47.0",
    "torch>=2.5.0",
]
